@@ -141,6 +141,10 @@ MACRO(MAKE_HASH_TOOLS _source)
     UNSET(_hash_tools_h)
 ENDMACRO()
 
+MACRO (WEBKIT_INCLUDE_CONFIG_FILES_IF_EXISTS)
+    INCLUDE_IF_EXISTS(${CMAKE_CURRENT_SOURCE_DIR}/Platform${PORT}.cmake)
+ENDMACRO ()
+
 MACRO (WEBKIT_WRAP_SOURCELIST)
     FOREACH (_file ${ARGN})
         GET_FILENAME_COMPONENT(_basename ${_file} NAME_WE)
